--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-asgiref==3.2.3
+asgiref==3.3.1
 Django==3.0.3
-django-widget-tweaks==1.4.5
-pytz==2019.3
-sqlparse==0.3.0
+django-widget-tweaks==1.4.8
+gunicorn==20.0.4
+pkg-resources==0.0.0
+pytz==2020.5
+sqlparse==0.4.1
